--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,6 +110,7 @@
     <string name="pref_last_notification">last_notification</string>
 
     <!-- Empty Weather Database -->
-    <string name="empty_forecast_list">No Weather Information Available</string>
+    <string name="empty_forecast_list">No weather information available</string>
+    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
 
 </resources>
